@@ -1,6 +1,5 @@
 /* ###
  * IP: GHIDRA
- * REVIEWED: YES
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +17,6 @@ package ghidra.app.plugin.core.comments;
 
 import java.awt.BorderLayout;
 import java.awt.Color;
-import java.text.SimpleDateFormat;
 
 import javax.swing.JPanel;
 import javax.swing.JTextPane;
@@ -27,6 +25,8 @@ import javax.swing.text.*;
 import ghidra.program.model.address.Address;
 import ghidra.program.model.listing.CommentHistory;
 import ghidra.program.model.listing.Program;
+import ghidra.util.DateUtils;
+import ghidra.util.Msg;
 
 /**
  * Panel that shows comment history for a particular comment type; uses
@@ -34,17 +34,16 @@ import ghidra.program.model.listing.Program;
  * readability.
  */
 class CommentHistoryPanel extends JPanel {
-	
+
 	private final static String NO_HISTORY = "No History Found";
 	private SimpleAttributeSet userAttrSet;
 	private SimpleAttributeSet dateAttrSet;
 	private SimpleAttributeSet textAttrSet;
 	private SimpleAttributeSet tabAttrSet;
-	
+
 	private StyledDocument doc;
 	private JTextPane textPane;
 
-	private SimpleDateFormat formatter;
 	private int commentType;
 
 	/**
@@ -52,87 +51,86 @@ class CommentHistoryPanel extends JPanel {
 	 * @param commentType comment type
 	 */
 	CommentHistoryPanel(int commentType) {
-			
+
 		super(new BorderLayout());
 		setUpAttributes();
 		this.commentType = commentType;
-		formatter = new SimpleDateFormat("yyyy MMM dd hh:mm aaa");
 		create();
 	}
-	
+
 	/**
 	 * Show the comment history
 	 * @param program program 
 	 * @param addr address of comment history
 	 */
 	void showCommentHistory(Program program, Address addr) {
-		
+
 		textPane.setText("");
-		
-		CommentHistory[] historyItems = 
-			program.getListing().getCommentHistory(addr, commentType);	
+
+		CommentHistory[] historyItems = program.getListing().getCommentHistory(addr, commentType);
 		try {
 			if (historyItems.length == 0) {
 				doc.insertString(0, NO_HISTORY, null);
 				doc.setCharacterAttributes(0, NO_HISTORY.length(), textAttrSet, true);
 				return;
 			}
-			for (int i=0; i<historyItems.length; i++) {
-				formatHistory(historyItems[i]);
+			for (CommentHistory historyItem : historyItems) {
+				formatHistory(historyItem);
 			}
-		} catch (BadLocationException e) {
+		}
+		catch (BadLocationException e) {
+			// shouldn't happen
+			Msg.debug(this, "Error setting comment text field text", e);
 		}
 		textPane.setCaretPosition(0);
 	}
-	
+
 	private void create() {
 		textPane = new JTextPane();
 		textPane.setEditable(false);
 		add(textPane, BorderLayout.CENTER);
-		doc = textPane.getStyledDocument(); 
+		doc = textPane.getStyledDocument();
 	}
 
-	private void formatHistory(CommentHistory history) 
-		throws BadLocationException {
-			
+	private void formatHistory(CommentHistory history) throws BadLocationException {
+
 		int offset = doc.getLength();
 		String userName = history.getUserName();
-		
+
 		if (offset > 0) {
 			userName = "\n" + userName;
 		}
 		doc.insertString(offset, userName, userAttrSet);
-		
+
 		offset = doc.getLength();
-		doc.insertString(offset, "\t" + formatter.format(history.getModificationDate()), 
-						 dateAttrSet);
+		doc.insertString(offset,
+			"\t" + DateUtils.formatDateTimestamp(history.getModificationDate()), dateAttrSet);
 		doc.setParagraphAttributes(offset, 1, tabAttrSet, false);
-		
+
 		offset = doc.getLength();
-		doc.insertString(offset, "\n"+ history.getComments()+"\n", textAttrSet);
+		doc.insertString(offset, "\n" + history.getComments() + "\n", textAttrSet);
 	}
-	
+
 	private void setUpAttributes() {
 		textAttrSet = new SimpleAttributeSet();
 		textAttrSet.addAttribute(StyleConstants.FontFamily, "Monospaced");
-		textAttrSet.addAttribute(StyleConstants.FontSize, new Integer(12));
+		textAttrSet.addAttribute(StyleConstants.FontSize, Integer.valueOf(12));
 		textAttrSet.addAttribute(StyleConstants.Foreground, Color.BLUE);
-		
+
 		userAttrSet = new SimpleAttributeSet();
 		userAttrSet.addAttribute(StyleConstants.FontFamily, "Tahoma");
-		userAttrSet.addAttribute(StyleConstants.FontSize, new Integer(12));
+		userAttrSet.addAttribute(StyleConstants.FontSize, Integer.valueOf(12));
 		userAttrSet.addAttribute(StyleConstants.Bold, Boolean.TRUE);
 
 		dateAttrSet = new SimpleAttributeSet();
 		dateAttrSet.addAttribute(StyleConstants.FontFamily, "Tahoma");
-		dateAttrSet.addAttribute(StyleConstants.FontSize, new Integer(11));
+		dateAttrSet.addAttribute(StyleConstants.FontSize, Integer.valueOf(11));
 		dateAttrSet.addAttribute(StyleConstants.Bold, Boolean.TRUE);
-		dateAttrSet.addAttribute(StyleConstants.Foreground,
-			new Color(124,37,18)); 
-		
+		dateAttrSet.addAttribute(StyleConstants.Foreground, new Color(124, 37, 18));
+
 		tabAttrSet = new SimpleAttributeSet();
 		TabStop tabs = new TabStop(100, StyleConstants.ALIGN_LEFT, TabStop.LEAD_NONE);
-		StyleConstants.setTabSet(tabAttrSet, new TabSet(new TabStop[]{tabs}));
+		StyleConstants.setTabSet(tabAttrSet, new TabSet(new TabStop[] { tabs }));
 	}
 
 }
